Thêm truy vấn cho index, chỉnh lại phần thống kê Chưa đụng thêm con AI mới nào

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,4 +2,7 @@
 
 {% block content %}
     <h1>Hi, {{ current_user.playername }} !</h1>
+    <hr>
+    {% include 'statistic/global_statistic.html' %}
+
 {% endblock %}
